# dbot

./: .gitignore  Cargo.toml  README.md
src/: apply.rs  compile.rs  error.rs  lib.rs  merge.rs  pattern.rs  profile.rs  template.rs  utils.rs
src/pattern/: de.rs
src/profile/: de.rs  parse.rs
