[package]
name = "dbot"
version = "0.0.0"
edition = "2021"

[dependencies]
globset = "0.4"
once_cell = "1.16"
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tera]
version = "1.17"
default-features = false

[dependencies.thisctx]
git = "https://github.com/loichyan/thisctx"

[dev-dependencies]
tempfile = "3.3"
