[package]
name = "dbot"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["app"]
app = ["anyhow", "clap", "directories", "extend", "tera", "tracing-subscriber"]

[dependencies]
globset = "0.4"
once_cell = "1.16"
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"

[dependencies.anyhow]
version = "1.0"
optional = true

[dependencies.clap]
version = "4.0"
optional = true
features = ["derive"]

[dependencies.directories]
version = "4.0"
optional = true

[dependencies.extend]
version = "1.1"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tera]
version = "1.17"
optional = true
default-features = false

[dependencies.thisctx]
git = "https://github.com/loichyan/thisctx"

[dependencies.time]
version = "0.3"
features = ["serde-well-known"]

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "dbot"
required-features = ["app"]
